fix bugs link to correct website and go invisible when clic/hovered

--- a/public/style.css
+++ b/public/style.css
@@ -21,3 +21,7 @@
   font-size: 1.5em;
 }
 
+a:hover{
+  color: white;
+}
+
